--- a/css/common.css
+++ b/css/common.css
@@ -76,6 +76,75 @@ a:hover {
 a:active {
   color: #9e9ea0;
 }
+.b-cert {
+  max-width: 1120px;
+  margin: auto;
+  padding-top: 30px;
+}
+.b-cert a {
+  margin-left: 45px;
+}
+.b-cert a:first-child {
+  margin-left: 0;
+}
+.b-advantages {
+  max-width: 1120px;
+  margin: auto;
+  font-size: 18px;
+}
+.b-advantages__list {
+  padding: 30px 0 50px;
+  text-align: justify;
+  text-align-last: justify;
+  line-height: 0;
+}
+.b-advantages__list > * {
+  display: inline-block;
+  vertical-align: top;
+  line-height: normal;
+}
+.b-advantages__list:after {
+  content: "";
+  display: inline-block;
+  vertical-align: top;
+  width: 100%;
+}
+.b-advantages__item {
+  width: 19%;
+  text-align: center;
+}
+.b-advantages__item:before {
+  content: "";
+  display: block;
+  margin: auto;
+  width: 90px;
+  height: 90px;
+  background-image: url(../img/icon/b-advantages__item.png);
+  background-repeat: no-repeat;
+}
+.b-advantages__item._montage:before {
+  background-position: 0px 0px;
+}
+.b-advantages__item._review:before {
+  background-position: -90px 0px;
+}
+.b-advantages__item._defence:before {
+  background-position: -180px 0px;
+}
+.b-advantages__item._expense:before {
+  background-position: -270px 0px;
+}
+.b-advantages__item._cold:before {
+  background-position: -360px 0px;
+}
+.b-advantages__text {
+  padding: 0 50px;
+  color: #525253;
+  font-family: "dinpro-light", sans-serif;
+  font-size: 18px;
+  font-style: italic;
+  line-height: 26px;
+}
 /*--------------------------- Общие стили (конец) ---------------------------
 */
 /*
@@ -589,6 +658,105 @@ a.b-footer__button:hover {
 /*-------------------------------------- до 768 -------------------------------------*/
 /*-------------------------------------- до 1024 -------------------------------------*/
 /* ПДФки (конец) */
+/* Вкладки (начало) */
+.b-tabs {
+  width: 960px;
+  margin: auto;
+  background: #fff;
+}
+.b-tabs__buttons:after {
+  clear: both;
+  content: "";
+  display: block;
+  width: 100%;
+}
+.b-tabs__buttons > li {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 160px;
+  height: 46px;
+  line-height: 46px;
+  float: left;
+  text-align: center;
+  color: #4e698b;
+  font-family: 'dinpro-black', sans-serif;
+  font-size: 17px;
+  border-left: 1px solid #d8d8d8;
+  border-bottom: 1px solid #d8d8d8;
+  cursor: pointer;
+  -webkit-transition: 0.3s color;
+  -moz-transition: 0.3s color;
+  transition: 0.3s color;
+}
+.b-tabs__buttons > li:first-child {
+  border-left: 0;
+}
+.b-tabs__buttons > li._current {
+  color: #db0303;
+  border-bottom: 0;
+}
+.b-tabs__buttons > li:hover {
+  color: #db0303;
+}
+.b-tabs__contents > li {
+  display: none;
+  padding: 40px 0;
+  font-size: 18px;
+  line-height: 33px;
+  color: #525252;
+}
+.b-tabs__contents > li dl:after {
+  clear: both;
+  content: "";
+  display: block;
+  width: 100%;
+}
+.b-tabs__contents > li dt {
+  display: inline-block;
+  vertical-align: top;
+  width: 45%;
+  text-align: right;
+  font-family: 'dinpro-light', sans-serif;
+}
+.b-tabs__contents > li dt:after {
+  content: ":";
+}
+.b-tabs__contents > li dd {
+  display: inline-block;
+  vertical-align: top;
+  width: 45%;
+  padding-left: 25px;
+  text-align: left;
+  font-weight: bold;
+}
+.b-tabs__contents > li._current {
+  display: block;
+}
+/* Вкладки (конец) */
+/* Примеры (начало) */
+.b-examples {
+  max-width: 1367px;
+  margin: auto;
+  padding-top: 30px;
+  line-height: 0;
+}
+.b-examples:after {
+  clear: both;
+  content: "";
+  display: block;
+  width: 100%;
+}
+.b-examples > a {
+  display: block;
+  float: left;
+  margin-right: 1px;
+  margin-bottom: 1px;
+}
+.b-examples > a > img {
+  display: block;
+}
+/* Примеры (конец) */
 /*--------------------- Стили структурных блоков (конец) --------------------
 */
 /*
@@ -1012,6 +1180,129 @@ a.b-footer__button:hover {
 /*-------------------------------------- до 768 -------------------------------------*/
 /*-------------------------------------- до 1024 -------------------------------------*/
 /* Главная страница (конец) */
+/* Страница продукции (начало) */
+.page-gasholders {
+  color: #0c192a;
+}
+.page-gasholders .b-g__ground-bg {
+  background-image: url(../img/bg/underground.png);
+  background-repeat: repeat-x;
+  background-position: center 100%;
+  -webkit-transition: 1.5s background-position cubic-bezier(0.23, 1, 0.32, 1);
+  -moz-transition: 1.5s background-position cubic-bezier(0.23, 1, 0.32, 1);
+  transition: 1.5s background-position cubic-bezier(0.23, 1, 0.32, 1);
+}
+.page-gasholders .b-g__ground-bg._underground {
+  background-position: center 0%;
+}
+.page-gasholders .b-g__ground-switch {
+  margin-top: 5px;
+}
+.page-gasholders .b-g__ground-switch-item {
+  margin: 0 15px;
+  border-bottom: 1px dashed;
+  color: #4e698b;
+}
+.page-gasholders .b-g__ground-switch-item._current {
+  color: #db0303;
+}
+.page-gasholders .b-g__pic {
+  position: relative;
+  overflow: hidden;
+  width: 1366px;
+  height: 542px;
+  margin: auto;
+}
+.page-gasholders .b-g__pic-weighter {
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: url(../img/bg/b-g__pic-weighter.png) center bottom no-repeat;
+}
+.page-gasholders .b-g__pic-holder {
+  position: absolute;
+  z-index: 2;
+  left: 0;
+  bottom: 60px;
+  width: 100%;
+  height: 100%;
+  background: url() center bottom no-repeat;
+  -webkit-opacity: 0;
+  -moz-opacity: 0;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  -webkit-transition: all 0.4s cubic-bezier(0.6, -0.28, 0.735, 0.045) 0.4s;
+  -moz-transition: all 0.4s cubic-bezier(0.6, -0.28, 0.735, 0.045) 0.4s;
+  transition: all 0.4s cubic-bezier(0.6, -0.28, 0.735, 0.045) 0.4s;
+}
+.page-gasholders .b-g__pic-holder._loaded {
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  bottom: 0;
+  -webkit-transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55) 0s;
+  -moz-transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55) 0s;
+  transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55) 0s;
+}
+.page-gasholders .b-g__pic-dimensions {
+  position: absolute;
+  z-index: 3;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: url() center bottom no-repeat;
+  -webkit-opacity: 0;
+  -moz-opacity: 0;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  -webkit-transform: scale(1.2) rotate(3deg);
+  -moz-transform: scale(1.2) rotate(3deg);
+  -ms-transform: scale(1.2) rotate(3deg);
+  transform: scale(1.2) rotate(3deg);
+  -webkit-transition: 0.4s all 0s;
+  -moz-transition: 0.4s all 0s;
+  transition: 0.4s all 0s;
+}
+.page-gasholders .b-g__pic-dimensions._loaded {
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  -webkit-transform: scale(1) rotate(0);
+  -moz-transform: scale(1) rotate(0);
+  -ms-transform: scale(1) rotate(0);
+  transform: scale(1) rotate(0);
+  -webkit-transition: 0.4s all 0.4s;
+  -moz-transition: 0.4s all 0.4s;
+  transition: 0.4s all 0.4s;
+}
+.page-gasholders .b-g__pic {
+  margin-bottom: -150px;
+}
+.page-gasholders .b-g__spec {
+  padding: 170px 0 75px;
+  background: #eceaea;
+}
+.page-gasholders .b-g__spec .h3 {
+  text-transform: none;
+  font-size: 28px;
+  font-family: 'dinpro-black', sans-serif;
+  margin-bottom: 35px;
+}
+/* Страница продукции (конец) */
 /* Главная страница (начало) */
 .page-404 {
   background: #f2f1f1;
