--- a/css/common.less
+++ b/css/common.less
@@ -83,6 +83,58 @@ a {
 
 .b-content {}
 
+.b-cert {
+	max-width: @content-width;
+	margin: auto;
+	padding-top: 30px;
+	a { margin-left: 45px; &:first-child { margin-left: 0 } }
+}
+
+.b-advantages {
+	max-width: @content-width;
+	margin: auto;
+	font-size: 18px;
+}
+
+.b-advantages__list {
+	padding: 30px 0 50px;
+	.inline-block-justify();
+}
+
+.b-advantages__item {
+	width: 19%;
+	text-align: center;
+
+
+	@size: 90px;
+	&:before {
+		content: "";
+		display: block;
+		margin: auto;
+		width: @size;
+		height: @size;
+		background-image: url(../img/icon/b-advantages__item.png);
+		background-repeat: no-repeat;
+	}
+
+	&._montage:before { .sprite(0,0,@size,@size) }
+	&._review:before  { .sprite(1,0,@size,@size) }
+	&._defence:before { .sprite(2,0,@size,@size) }
+	&._expense:before { .sprite(3,0,@size,@size) }
+	&._cold:before    { .sprite(4,0,@size,@size) }
+}
+
+.b-advantages__text {
+	padding: 0 50px;
+	color: #525253;
+    font-family: "dinpro-light",sans-serif;
+    font-size: 18px;
+    font-style: italic;
+    line-height: 26px;
+}
+
+
+
 /*--------------------------- Общие стили (конец) ---------------------------
 */
 
@@ -100,6 +152,8 @@ a {
 @import "modules/b-partners.less";
 @import "modules/b-previews.less";
 @import "modules/b-pdf.less";
+@import "modules/b-tabs.less";
+@import "modules/b-examples.less";
 /*--------------------- Стили структурных блоков (конец) --------------------
 */
 
@@ -113,6 +167,7 @@ a {
 @import "pages/complex.less";
 @import "pages/contacts.less";
 @import "pages/gear.less";
+@import "pages/gasholders.less";
 @import "pages/404.less";
 /*--------------------- Индивидуальные стили страниц (конец) ----------------
 */
