--- a/css/modules/b-header.less
+++ b/css/modules/b-header.less
@@ -101,7 +101,7 @@
 	border-left: 1px solid @light-gray;
 	background: url(../img/bg/b-nav__item_current.png) -12px 6px no-repeat;
 	.transition(0.3s background-position);
-	&:hover { background-position: 0 6px }
+	&:hover { background-position: 0 6px; .b-nav__link{color: @red} }
 
 	&._current {
 		color: @black;
