Видео на главной

--- a/css/common.css
+++ b/css/common.css
@@ -742,7 +742,6 @@ a.b-footer__button:hover {
   max-width: 1367px;
   margin: auto;
   padding-top: 30px;
-  line-height: 0;
 }
 .b-examples:after {
   clear: both;
@@ -750,14 +749,134 @@ a.b-footer__button:hover {
   display: block;
   width: 100%;
 }
-.b-examples > a {
+.b-examples__item {
   display: block;
+  overflow: hidden;
   float: left;
   margin-right: 1px;
   margin-bottom: 1px;
 }
-.b-examples > a > img {
+.b-examples__link {
   display: block;
+  position: relative;
+}
+.b-examples__link > img {
+  display: block;
+}
+.b-examples__link:hover .b-examples__item-text {
+  bottom: 0;
+  -webkit-transition: 0.5s bottom cubic-bezier(0.215, 0.61, 0.355, 1);
+  -moz-transition: 0.5s bottom cubic-bezier(0.215, 0.61, 0.355, 1);
+  transition: 0.5s bottom cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.b-examples__item-text {
+  position: absolute;
+  left: 0;
+  bottom: -100%;
+  width: 100%;
+  padding: 15px 0;
+  font-size: 18px;
+  text-align: left;
+  background: #4e698b;
+  color: #fff;
+  -webkit-transition: 0.5s bottom cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  -moz-transition: 0.5s bottom cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  transition: 0.5s bottom cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+.b-examples__item-title {
+  display: block;
+  margin-bottom: 4px;
+  padding: 0 15px;
+  font-family: 'dinpro';
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.b-examples__item-subtitle {
+  display: block;
+  padding: 0 15px;
+  font-family: 'dinpro-light', sans-serif;
+  font-style: normal;
+}
+/* Примеры (конец) */
+/* Примеры (начало) */
+.b-videos {
+  max-width: 1200px;
+  margin: auto;
+  padding-top: 30px;
+}
+.b-videos:after {
+  clear: both;
+  content: "";
+  display: block;
+  width: 100%;
+}
+.b-videos__list {
+  font-size: 0;
+  max-width: 1200p;
+}
+.b-videos__item {
+  display: block;
+  overflow: hidden;
+  margin-bottom: 10px;
+  background-color: #4e698b;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  -webkit-background-blend-mode: luminosity;
+  -moz-background-blend-mode: luminosity;
+  background-blend-mode: luminosity;
+}
+.b-videos__item:hover {
+  -webkit-background-blend-mode: normal;
+  -moz-background-blend-mode: normal;
+  background-blend-mode: normal;
+}
+.b-videos__item._col7 {
+  width: 796.8333333333333px;
+}
+.b-videos__item._col6 {
+  width: 683px;
+}
+.b-videos__item._col5 {
+  width: 569.1666666666666px;
+}
+.b-videos__item._col4 {
+  width: 455.3333333333333px;
+}
+.b-videos__item._col3 {
+  width: 341.5px;
+}
+.b-videos__item._col2 {
+  width: 227.66666666666666px;
+}
+.b-videos__link {
+  display: block;
+  position: relative;
+}
+.b-videos__link > img {
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  visibility: hidden;
+}
+.b-videos__link:hover .b-videos__item-text {
+  background: #db0303;
+}
+.b-videos__item-text {
+  display: block;
+  width: 100%;
+  padding: 10px 20px;
+  font-size: 18px;
+  text-align: left;
+  text-transform: uppercase;
+  background: #4e698b;
+  color: #fff;
+  -webkit-transition: 0.5s bottom cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  -moz-transition: 0.5s bottom cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  transition: 0.5s bottom cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  font-family: 'dinpro-light', sans-serif;
+  font-style: normal;
 }
 /* Примеры (конец) */
 .b-slider {
