--- a/css/common.less
+++ b/css/common.less
@@ -154,6 +154,7 @@ a {
 @import "modules/b-pdf.less";
 @import "modules/b-tabs.less";
 @import "modules/b-examples.less";
+@import "modules/b-videos.less";
 @import "modules/b-slider.less";
 /*--------------------- Стили структурных блоков (конец) --------------------
 */
