--- a/css/pages/contacts.less
+++ b/css/pages/contacts.less
@@ -66,6 +66,7 @@
 	.contacts__map{
 		width:791px;
 		height: 418px;
+		background: url(../img/pages/contacts/map.jpg);
 	}
 	.contacts__people{
 		margin-top:64px;
