--- a/css/common.less
+++ b/css/common.less
@@ -90,49 +90,6 @@ a {
 	a { margin-left: 45px; &:first-child { margin-left: 0 } }
 }
 
-.b-advantages {
-	max-width: @content-width;
-	margin: auto;
-	font-size: 18px;
-}
-
-.b-advantages__list {
-	padding: 30px 0 50px;
-	.inline-block-justify();
-}
-
-.b-advantages__item {
-	width: 19%;
-	text-align: center;
-
-
-	@size: 90px;
-	&:before {
-		content: "";
-		display: block;
-		margin: auto;
-		width: @size;
-		height: @size;
-		background-image: url(../img/icon/b-advantages__item.png);
-		background-repeat: no-repeat;
-	}
-
-	&._montage:before { .sprite(0,0,@size,@size) }
-	&._review:before  { .sprite(1,0,@size,@size) }
-	&._defence:before { .sprite(2,0,@size,@size) }
-	&._expense:before { .sprite(3,0,@size,@size) }
-	&._cold:before    { .sprite(4,0,@size,@size) }
-}
-
-.b-advantages__text {
-	padding: 0 50px;
-	color: #525253;
-    font-family: "dinpro-light",sans-serif;
-    font-size: 18px;
-    font-style: italic;
-    line-height: 26px;
-}
-
 
 
 /*--------------------------- Общие стили (конец) ---------------------------
@@ -156,6 +113,7 @@ a {
 @import "modules/b-examples.less";
 @import "modules/b-videos.less";
 @import "modules/b-slider.less";
+@import "modules/b-advantages.less";
 /*--------------------- Стили структурных блоков (конец) --------------------
 */
 
