--- a/fonts/stylesheet.css
+++ b/fonts/stylesheet.css
@@ -13,35 +13,51 @@
 
 @font-face	{
 	font-family: 'dinpro';
-	src: url('../fonts/PFDinTextPro-Regular.ttf');
+	src: url('pfdintextpro-regular-webfont.eot');
+	src: url('pfdintextpro-regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('PFDinTextPro-Regular.ttf');
 	font-weight: normal;
 	font-style: normal;
 	}
 
 @font-face	{
 	font-family: 'dinpro';
-	src: url('../fonts/PFDinDisplayPro-Bold.ttf');
+	src: url('pfdindisplaypro-bold-webfont.eot');
+	src: url('pfdindisplaypro-bold-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('PFDinDisplayPro-Bold.ttf');
 	font-weight: bold;
 	font-style: normal;
 	}
 
 @font-face	{
 	font-family: 'dinpro-light';
-	src: url('../fonts/PFDinTextPro-Light.ttf');
+	src: url('pfdintextpro-light-webfont.eot');
+	src: url('pfdintextpro-light-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('PFDinTextPro-Light.ttf');
 	font-weight: normal;
 	font-style: normal;
 	}
 
 @font-face	{
 	font-family: 'dinpro-light';
-	src: url('../fonts/PFDinTextPro-LightItalic.ttf');
+	src: url('pfdintextpro-lightitalic-webfont.eot');
+	src: url('pfdintextpro-lightitalic-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('PFDinTextPro-LightItalic.ttf');
 	font-weight: normal;
 	font-style: italic;
 	}
 
 @font-face	{
 	font-family: 'dinpro-black';
-	src: url('../fonts/PFDinDisplayPro-Black.ttf');
+	src: url('pfdindisplaypro-black-webfont.eot');
+	src: url('pfdindisplaypro-black-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('PFDinDisplayPro-Black.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
+
+
+
+
+
+
