--- a/css/pages/complex.css
+++ b/css/pages/complex.css
@@ -9,6 +9,27 @@
 .page-complex .stages__item {
   margin-top: 20px;
   counter-increment: сstage 1;
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  -webkit-transition: 0.7s all;
+  -moz-transition: 0.7s all;
+  transition: 0.7s all;
+}
+.page-complex .stages__item._faded {
+  -webkit-opacity: 0;
+  -moz-opacity: 0;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  -webkit-transform: scale(1.2) translateY(100px);
+  -moz-transform: scale(1.2) translateY(100px);
+  -ms-transform: scale(1.2) translateY(100px);
+  transform: scale(1.2) translateY(100px);
 }
 .page-complex .stages__item:before {
   content: counter(сstage);
@@ -45,6 +66,13 @@
 .page-complex .stages__item__slides {
   text-align: center;
   font-size: 0px;
+  -webkit-transition: 0.7s all 0.4s;
+  -moz-transition: 0.7s all 0.4s;
+  transition: 0.7s all 0.4s;
+  -webkit-transform: translateY(0px);
+  -moz-transform: translateY(0px);
+  -ms-transform: translateY(0px);
+  transform: translateY(0px);
 }
 .page-complex .stages__item__slides .item {
   display: inline;
