--- a/css/common.css
+++ b/css/common.css
@@ -84,6 +84,21 @@ a:active {
 .b-cert a {
   margin-left: 45px;
 }
+.b-cert a > img {
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.b-cert a:hover > img {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+}
 .b-cert a:first-child {
   margin-left: 0;
 }
@@ -333,7 +348,7 @@ a.b-footer__button:hover {
 .b-promo__top-line {
   content: "";
   position: absolute;
-  left: -1000px;
+  left: 0;
   top: 0;
   width: 966px;
   height: 15px;
@@ -342,13 +357,10 @@ a.b-footer__button:hover {
   -moz-transition: left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   transition: left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
-.b-promo__top-line._loaded {
-  left: 0;
-}
 .b-promo__bottom-line {
   content: "";
   position: absolute;
-  right: -1000px;
+  right: 0;
   bottom: 0;
   width: 969px;
   height: 15px;
@@ -356,9 +368,6 @@ a.b-footer__button:hover {
   -webkit-transition: right 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   -moz-transition: right 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   transition: right 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-}
-.b-promo__bottom-line._loaded {
-  right: 0;
 }
 .b-promo__title {
   padding-top: 70px;
@@ -1202,6 +1211,27 @@ a.b-slider__video-close:before {
 .page-complex .stages__item {
   margin-top: 20px;
   counter-increment: сstage 1;
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  -webkit-transition: 0.7s all;
+  -moz-transition: 0.7s all;
+  transition: 0.7s all;
+}
+.page-complex .stages__item._faded {
+  -webkit-opacity: 0;
+  -moz-opacity: 0;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  -webkit-transform: scale(1.2) translateY(100px);
+  -moz-transform: scale(1.2) translateY(100px);
+  -ms-transform: scale(1.2) translateY(100px);
+  transform: scale(1.2) translateY(100px);
 }
 .page-complex .stages__item:before {
   content: counter(сstage);
@@ -1238,6 +1268,13 @@ a.b-slider__video-close:before {
 .page-complex .stages__item__slides {
   text-align: center;
   font-size: 0px;
+  -webkit-transition: 0.7s all 0.4s;
+  -moz-transition: 0.7s all 0.4s;
+  transition: 0.7s all 0.4s;
+  -webkit-transform: translateY(0px);
+  -moz-transform: translateY(0px);
+  -ms-transform: translateY(0px);
+  transform: translateY(0px);
 }
 .page-complex .stages__item__slides .item {
   display: inline;
