--- a/css/modules/b-promo.less
+++ b/css/modules/b-promo.less
@@ -42,27 +42,29 @@
 .b-promo__top-line {
 	content: "";
 	position: absolute;
-	left: -1000px;
+	//left: -1000px;
+	left: 0;
 	top: 0;
 	width: 966px;
 	height: 15px;
 	background: url(../img/bg/b-promo__top-line.png) left top no-repeat;
 	.transition(left 1s @quad-out);
 
-	&._loaded { left: 0; }
+	//&._loaded { left: 0; }
 }
 
 .b-promo__bottom-line {
 	content: "";
 	position: absolute;
-	right: -1000px;
+	//right: -1000px;
+	right: 0;
 	bottom: 0;
 	width: 969px;
 	height: 15px;
 	background: url(../img/bg/b-promo__bottom-line.png) left top no-repeat;
 	.transition(right 1s @quad-out);
 
-	&._loaded { right: 0; }
+	//&._loaded { right: 0; }
 }
 
 .b-promo__title {
