--- a/css/pages/gear.less
+++ b/css/pages/gear.less
@@ -13,7 +13,7 @@
 
 	.wrapper.wrapper--equipment-inside .content{
 		
-		overflow: hidden;
+		//overflow: hidden;
 		padding:0 120px;
 		max-width: @min-width;
 		margin: auto;
@@ -68,31 +68,45 @@
 	}
 	.content .h1--opening{
 		position: relative;
+		display: inline-block;
+		white-space: nowrap;
+		cursor: pointer;
 	}
 	.content .h1--opening:hover .inside-menu{
-		display: block;
+		display: inline-nblock;
 	}
 	.inside-menu .h1--opening{
+		display: inline-block;
 		margin-top:0px;
+		white-space: nowrap;
+		cursor: pointer;
 	}
 	.h1--opening i{
 		width:20px;
 		height: 26px;
-		background: url(../i/arrow-down.png) no-repeat 0px 4px;
+		background: url(../img/pages/gear/arrow-down.png) no-repeat 0px 4px;
 		display: inline-block;
-		margin-right:15px;
+		margin: 0 19px;
 	}
 	.inside-menu{
-		background: #fff;
-		width:671px;
-		padding-top:27px;
-		position: absolute;
-		top: -27px;
-		left:50%;
-		margin-left: -335px;
 		display: none;
+		position: absolute;
+		left: 0;
+		top: -27px;
+		background: #fff;
+		padding-top: 27px;
+		padding-right: 40px;
 		text-align: left;
 		text-transform: none;
+		.box-shadow(1px 2px 2px rgba(128, 128, 128, 0.2));
+
+		&._open {
+			display: inline-block;
+		}
+
+		.h1--opening i {
+			.rotate(180)
+		}
 	}
 	.inside-menu__ul{
 		 overflow: hidden;
@@ -113,7 +127,7 @@
 		border-bottom: 1px solid;
 		text-decoration: none;
 	}
-	.inside-menu__item.active{
+	.inside-menu__item._current{
 		color:#d70000;
 		border-bottom: transparent;
 	}
