--- a/css/pages/gasholders.less
+++ b/css/pages/gasholders.less
@@ -131,6 +131,12 @@
 			font-family: 'dinpro-black', sans-serif;
 			margin-bottom: 35px;
 		}
+
+		&._invert {
+			padding-top: 0;
+			background: #fff;
+			.b-tabs { background: #eceaea; }
+		}
 	}
 
 
