--- a/css/pages/gasholders.css
+++ b/css/pages/gasholders.css
@@ -153,4 +153,11 @@
   font-family: 'dinpro-black', sans-serif;
   margin-bottom: 35px;
 }
+.page-gasholders .b-g__spec._invert {
+  padding-top: 0;
+  background: #fff;
+}
+.page-gasholders .b-g__spec._invert .b-tabs {
+  background: #eceaea;
+}
 /* Страница продукции (конец) */
