Модалка обратной связи

--- a/css/common.less
+++ b/css/common.less
@@ -107,6 +107,7 @@ a {
 
 /*
 --------------------- Стили структурных блоков (начало) -------------------*/
+@import "modules/b-button.less";
 @import "modules/b-header.less";
 @import "modules/b-footer.less";
 @import "modules/b-promo.less";
@@ -120,6 +121,7 @@ a {
 @import "modules/b-videos.less";
 @import "modules/b-slider.less";
 @import "modules/b-advantages.less";
+@import "modules/b-modal.less";
 /*--------------------- Стили структурных блоков (конец) --------------------
 */
 
