--- a/css/common.css
+++ b/css/common.css
@@ -106,6 +106,45 @@ a:active {
 */
 /*
 --------------------- Стили структурных блоков (начало) -------------------*/
+.b-button,
+a.b-button,
+input.b-button,
+button.b-button {
+  position: relative;
+  left: 0;
+  top: 0;
+  display: inline-block;
+  vertical-align: middle;
+  white-space: nowrap;
+  width: auto;
+  height: 38px;
+  line-height: 38px;
+  padding: 0 30px;
+  font-size: 14px;
+  font-weight: normal;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #4e698b;
+  background: #fff;
+  border: 1px solid #4e698b;
+  cursor: pointer;
+  -webkit-appearance: none;
+  transition: 0.3s background;
+}
+.b-button:hover,
+a.b-button:hover,
+input.b-button:hover,
+button.b-button:hover {
+  background: #4e698b;
+  color: #fff;
+}
+.b-button:active,
+a.b-button:active,
+input.b-button:active,
+button.b-button:active {
+  left: 1px;
+  top: 2px;
+}
 /* Шапка (начало) */
 .b-header {
   width: 1366px;
@@ -967,7 +1006,7 @@ a.b-slider__video-close:before {
 }
 .b-slider-previews {
   position: absolute;
-  z-index: 10000;
+  z-index: 100;
   left: 0;
   bottom: 30px;
   width: 100%;
@@ -1094,6 +1133,73 @@ a.b-slider__video-close:before {
   line-height: 26px;
 }
 /* Преимущества (конец) */
+/*
+------------------------------ Модальные окна (начало) --------------------------*/
+.b-callback {
+  width: 745px;
+  min-height: 690px;
+  height: auto;
+  margin-left: -362px;
+  padding: 50px 100px;
+  font-family: 'dinpro-light', sans-serif;
+  font-size: 16px;
+  text-align: center;
+}
+.b-callback .b-modal__close {
+  font-size: 0;
+  background: url(../img/icon/modal-close_black.png) center center no-repeat;
+  right: 10px;
+  top: 10px;
+}
+.b-callback__form {
+  width: 480px;
+  margin: auto;
+  padding: 25px 0;
+  text-align: left;
+}
+.b-callback__fields > li {
+  margin-bottom: 25px;
+}
+.b-callback__input {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+  height: 44px;
+  padding: 0 15px;
+}
+.b-callback__textarea {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+  min-height: 155px;
+  padding: 15px;
+  resize: vertical;
+}
+.b-callback__input,
+.b-callback__textarea {
+  border: 1px solid #828383;
+  outline: 1px solid transparent;
+  -webkit-transition: 0.3s border, 0.3s outline;
+  -moz-transition: 0.3s border, 0.3s outline;
+  transition: 0.3s border, 0.3s outline;
+}
+.b-callback__input:hover,
+.b-callback__textarea:hover {
+  border: 1px solid #000;
+}
+.b-callback__input:focus,
+.b-callback__textarea:focus {
+  border: 1px solid #000;
+  outline: 1px solid #000;
+}
+.b-callback__submit {
+  margin-top: 15px;
+  font-family: 'dinpro', sans-serif !important;
+  font-weight: bold !important;
+}
+/*------------------------------ Модальные окна (конец) ---------------------------*/
 /*--------------------- Стили структурных блоков (конец) --------------------
 */
 /*
