--- a/css/default/reset.css
+++ b/css/default/reset.css
@@ -16,10 +16,10 @@ input::-ms-clear { width: 0; height: 0; }
 input, textarea { box-shadow: none; outline: none; }
 
 /* убираем плэйсхолдеры, когда курсор в поле */
-:focus:-moz-placeholder            { color: transparent; }
+/* :focus:-moz-placeholder            { color: transparent; }
 :focus::-moz-placeholder           { color: transparent; }
 :focus:-ms-input-placeholder       { color: transparent; }
-:focus::-webkit-input-placeholder  { color: transparent; }
+:focus::-webkit-input-placeholder  { color: transparent; } */
 
 /* убираем маркировку списков */
 li { list-style-type: none; }
