Модалки: экскурсия, перезвоните мне, заявка отправлена

--- a/css/common.css
+++ b/css/common.css
@@ -119,7 +119,7 @@ button.b-button {
   width: auto;
   height: 38px;
   line-height: 38px;
-  padding: 0 30px;
+  padding: 0 40px;
   font-size: 14px;
   font-weight: normal;
   text-decoration: none;
@@ -129,7 +129,6 @@ button.b-button {
   border: 1px solid #4e698b;
   cursor: pointer;
   -webkit-appearance: none;
-  transition: 0.3s background;
 }
 .b-button:hover,
 a.b-button:hover,
@@ -144,6 +143,21 @@ input.b-button:active,
 button.b-button:active {
   left: 1px;
   top: 2px;
+}
+.b-button._invert,
+a.b-button._invert,
+input.b-button._invert,
+button.b-button._invert {
+  background: #4e698b;
+  border: 1px solid #fff;
+  color: #fff;
+}
+.b-button._invert:hover,
+a.b-button._invert:hover,
+input.b-button._invert:hover,
+button.b-button._invert:hover {
+  background: #fff;
+  color: #4e698b;
 }
 /* Шапка (начало) */
 .b-header {
@@ -1145,22 +1159,57 @@ a.b-slider__video-close:before {
   font-size: 16px;
   text-align: center;
 }
-.b-callback .b-modal__close {
+.b-success {
+  width: 745px;
+  height: 250px;
+  padding-top: 80px;
+  margin-left: -362px;
+  color: #4e698b;
+  text-align: center;
+}
+.b-callback-simple {
+  width: 745px;
+  min-height: 460px;
+  height: auto;
+  margin-left: -362px;
+  padding: 50px 100px;
+  font-family: 'dinpro-light', sans-serif;
+  font-size: 16px;
+  text-align: center;
+  background: #4e698b;
+  color: #fff;
+}
+.b-excursion {
+  width: 745px;
+  min-height: 460px;
+  height: auto;
+  margin-left: -362px;
+  padding: 50px 100px;
+  font-family: 'dinpro-light', sans-serif;
+  font-size: 16px;
+  text-align: center;
+  background: #4e698b;
+  color: #fff;
+}
+.b-modal__close {
   font-size: 0;
   background: url(../img/icon/modal-close_black.png) center center no-repeat;
   right: 10px;
   top: 10px;
 }
-.b-callback__form {
+.b-modal__close._invert {
+  background-image: url(../img/icon/modal-close_white.png);
+}
+.b-modal__form {
   width: 480px;
   margin: auto;
   padding: 25px 0;
   text-align: left;
 }
-.b-callback__fields > li {
+.b-modal__fields > li {
   margin-bottom: 25px;
 }
-.b-callback__input {
+.b-modal__input {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -1168,7 +1217,7 @@ a.b-slider__video-close:before {
   height: 44px;
   padding: 0 15px;
 }
-.b-callback__textarea {
+.b-modal__textarea {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -1177,24 +1226,28 @@ a.b-slider__video-close:before {
   padding: 15px;
   resize: vertical;
 }
-.b-callback__input,
-.b-callback__textarea {
+.b-modal__input,
+.b-modal__textarea {
   border: 1px solid #828383;
   outline: 1px solid transparent;
   -webkit-transition: 0.3s border, 0.3s outline;
   -moz-transition: 0.3s border, 0.3s outline;
   transition: 0.3s border, 0.3s outline;
 }
-.b-callback__input:hover,
-.b-callback__textarea:hover {
+.b-modal__input:hover,
+.b-modal__textarea:hover {
   border: 1px solid #000;
 }
-.b-callback__input:focus,
-.b-callback__textarea:focus {
+.b-modal__input:focus,
+.b-modal__textarea:focus {
   border: 1px solid #000;
   outline: 1px solid #000;
 }
-.b-callback__submit {
+.b-modal__input._thin-border-focus:focus,
+.b-modal__textarea._thin-border-focus:focus {
+  outline: none;
+}
+.b-modal__submit {
   margin-top: 15px;
   font-family: 'dinpro', sans-serif !important;
   font-weight: bold !important;
@@ -1533,7 +1586,7 @@ a.b-slider__video-close:before {
 }
 .page-contacts .wrapper--contacts .content__body__left {
   float: left;
-  padding-right: 372px;
+  width: 892px;
 }
 .page-contacts .wrapper--contacts .content__body__right span.phone {
   margin-left: 35px;
