--- a/css/pages/contacts.less
+++ b/css/pages/contacts.less
@@ -44,7 +44,7 @@
 	}
 	.wrapper--contacts .content__body__left{
 		float:left;
-		padding-right: 372px;
+		width: 892px;
 	}
 	.wrapper--contacts .content__body__right span.phone{
 		margin-left:35px;
