--- a/css/pages/contacts.css
+++ b/css/pages/contacts.css
@@ -37,7 +37,7 @@
 }
 .page-contacts .wrapper--contacts .content__body__left {
   float: left;
-  padding-right: 372px;
+  width: 892px;
 }
 .page-contacts .wrapper--contacts .content__body__right span.phone {
   margin-left: 35px;
