Исправлено положение полосок в баннере

--- a/css/modules/b-promo.less
+++ b/css/modules/b-promo.less
@@ -45,9 +45,10 @@
 	left: -1000px;
 	// left: 0;
 	top: 0;
-	width: 966px;
+	width: 65%;
 	height: 15px;
 	background: url(../img/bg/b-promo__top-line.png) left top no-repeat;
+	.background-size(100% 100%);
 	.transition(left 1s @quad-out);
 
 	&._loaded { left: 0; }
@@ -59,9 +60,10 @@
 	right: -1000px;
 	// right: 0;
 	bottom: 0;
-	width: 969px;
+	width: 65%;
 	height: 15px;
 	background: url(../img/bg/b-promo__bottom-line.png) left top no-repeat;
+	.background-size(100% 100%);
 	.transition(right 1s @quad-out);
 
 	&._loaded { right: 0; }
