--- a/css/modules/b-promo.css
+++ b/css/modules/b-promo.css
@@ -38,9 +38,13 @@
   position: absolute;
   left: -1000px;
   top: 0;
-  width: 966px;
+  width: 65%;
   height: 15px;
   background: url(../img/bg/b-promo__top-line.png) left top no-repeat;
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+  background-size: 100% 100%;
   -webkit-transition: left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   -moz-transition: left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   transition: left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
@@ -53,9 +57,13 @@
   position: absolute;
   right: -1000px;
   bottom: 0;
-  width: 969px;
+  width: 65%;
   height: 15px;
   background: url(../img/bg/b-promo__bottom-line.png) left top no-repeat;
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+  background-size: 100% 100%;
   -webkit-transition: right 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   -moz-transition: right 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   transition: right 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
