--- a/css/modules/b-promo.css
+++ b/css/modules/b-promo.css
@@ -36,30 +36,12 @@
 .b-promo__top-line {
   content: "";
   position: absolute;
-  left: -1000px;
+  right: 100%;
+  margin-right: -286px;
   top: 0;
-  width: 65%;
+  width: 2000px;
   height: 15px;
   background: url(../img/bg/b-promo__top-line.png) left top no-repeat;
-  -webkit-background-size: 100% 100%;
-  -moz-background-size: 100% 100%;
-  -o-background-size: 100% 100%;
-  background-size: 100% 100%;
-  -webkit-transition: left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  -moz-transition: left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  transition: left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-}
-.b-promo__top-line._loaded {
-  left: 0;
-}
-.b-promo__bottom-line {
-  content: "";
-  position: absolute;
-  right: -1000px;
-  bottom: 0;
-  width: 65%;
-  height: 15px;
-  background: url(../img/bg/b-promo__bottom-line.png) left top no-repeat;
   -webkit-background-size: 100% 100%;
   -moz-background-size: 100% 100%;
   -o-background-size: 100% 100%;
@@ -68,8 +50,28 @@
   -moz-transition: right 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   transition: right 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
+.b-promo__top-line._loaded {
+  right: 50%;
+}
+.b-promo__bottom-line {
+  content: "";
+  position: absolute;
+  left: 100%;
+  margin-left: -286px;
+  bottom: 0;
+  width: 2000px;
+  height: 15px;
+  background: url(../img/bg/b-promo__bottom-line.png) left top no-repeat;
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+  background-size: 100% 100%;
+  -webkit-transition: left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  -moz-transition: left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: left 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
 .b-promo__bottom-line._loaded {
-  right: 0;
+  left: 50%;
 }
 .b-promo__title {
   padding-top: 70px;
