--- a/css/modules/b-promo.less
+++ b/css/modules/b-promo.less
@@ -48,7 +48,7 @@
 	top: 0;
 	width: 2000px;
 	height: 15px;
-	background: url(../img/bg/b-promo__top-line.png) left top no-repeat;
+	background: url(../img/bg/b-promo__top-line.png?v2) left top no-repeat;
 	.background-size(100% 100%);
 	.transition(right 1s @quad-out);
 
@@ -64,7 +64,7 @@
 	bottom: 0;
 	width: 2000px;
 	height: 15px;
-	background: url(../img/bg/b-promo__bottom-line.png) left top no-repeat;
+	background: url(../img/bg/b-promo__bottom-line.png?v2) left top no-repeat;
 	.background-size(100% 100%);
 	.transition(left 1s @quad-out);
 
